[tool.poetry]
name = "sunshine"
version = "0.1.0"
description = "A discord bot made with python"
authors = ["NotAnAperture <<>>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
